<resources>
    <string name="app_name">Financas</string>

    <string name="lancamento">Lançamento</string>
    <string name="resumo">Resumo</string>
    <string name="cliente">Cliente</string>
    <string name="configuracao">Configuração</string>

    <string name="precoKg">Preço/KG (R$)</string>
    <string name="taxaCredito">Taxa de Crédito (%)</string>
    <string name="taxaDebito">Taxa de Débito (%)</string>

    <string name="btnDesc">Descricao</string>
    <string name="pesquisar">pesquisar</string>
    <string name="incluir">Incluir</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="menu">Menu</string>
    <string name="sair">Sair</string>
    <string name="receita">Receita</string>
    <string name="gasto">Gasto</string>
    <string name="geral">Geral</string>
    <string name="total">Total</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="credito">Crédito</string>
    <string name="debito">Débito</string>
    <string name="dia">Dia</string>

    <string name="quantidadeCliente">Quantidade/Cliente</string>
    <string name="quantidadeKg">Quantidade/Kg</string>
    <string name="outrosProdutos">Outros Produtos</string>
    <string name="gastoKg">Gasto/KG</string>
    <string name="gastoOperacional">Operacional</string>
    <string name="valorDinheiro">Dinheiro</string>
    <string name="valorCredito">Crédito</string>
    <string name="valorDebito">Débito</string>


</resources>
