<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.diegodantas.financas.LancamentoActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/txtReceita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:text="@string/receita"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtReceita"
                android:layout_marginTop="20dp"
                android:text="@string/quantidadeCliente"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtPrecoKg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edtPrecoKg"
                android:layout_marginTop="20dp"
                android:text="@string/quantidadeKg"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtTaxaCredito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edtTaxaCredito"
                android:layout_marginTop="20dp"
                android:text="@string/precoKg"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtTaxaDebito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edtTaxaDebito"
                android:layout_marginTop="20dp"
                android:text="@string/outrosProdutos"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtReceitaOutrosProdutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edtReceitaOutrosProdutos"
                android:layout_marginTop="20dp"
                android:text="@string/geral"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtReceitaGeral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/txtGasto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edtReceitaGeral"
                android:layout_marginTop="20dp"
                android:text="@string/gasto"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtGasto"
                android:layout_marginTop="20dp"
                android:text="@string/gastoKg"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtGastoKg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView6"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edtGastoKg"
                android:layout_marginTop="20dp"
                android:text="@string/outrosProdutos"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtGastoOutrosProdutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView7"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edtGastoOutrosProdutos"
                android:layout_marginTop="20dp"
                android:text="@string/gastoOperacional"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtGastoOperacional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView8"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edtGastoOperacional"
                android:layout_marginTop="20dp"
                android:text="@string/gastoOperacional"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView9"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edt1"
                android:layout_marginTop="20dp"
                android:text="@string/geral"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView10"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberDecimal" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
